fix sidebar z-index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@ body {
     -webkit-transition: width 0.35s ease;
     -moz-transition: width 0.35s ease;
     -o-transition: width 0.35s ease;
+  z-index: 1001;
 }
 
 #main-sidebar-container a {
@@ -29,15 +30,22 @@ body {
   padding:15px;
   overflow:hidden;
   width:150px;
-  position: fixed;
-  z-index: 1
 }
+
 .awanafy-main-img {
   width: 65%;
   height: auto;
   margin: 0 auto;
-  /*position: absolute;
-  z-index: 0;*/
+}
+
+.primary-content {
+  position: relative;
+  z-index: 0;
+}
+
+.secondary-content {
+  position: relative;
+  z-index: 0;
 }
 
 /* centers the columns below main image */
